--- a/dada/templates/adv_archive_options_screen.tmpl
+++ b/dada/templates/adv_archive_options_screen.tmpl
@@ -533,7 +533,7 @@ Gravatars
   Default Gravatar URL:
  </label>
  <br /> 
- <input type="text" name="default_gravatar_url" id="default_gravatar_url" value="<!-- tmpl_var list_settings.default_gravatar_url -->" class="full" /> 
+ <input type="text" name="default_gravatar_url" id="default_gravatar_url" value="<!-- tmpl_var list_settings.default_gravatar_url -->"  /> 
  <br /> 
  This image is used, if no Gravatar is found for the email address.
 
