--- a/dada/templates/back_link_screen.tmpl
+++ b/dada/templates/back_link_screen.tmpl
@@ -31,7 +31,7 @@
   Site Name:
  </label>
  <br />
- <input type="text" name="website_name" id="website_name" value="<!-- tmpl_var list_settings.website_name escape="HTML"-->" class="full" />
+ <input type="text" name="website_name" id="website_name" value="<!-- tmpl_var list_settings.website_name escape="HTML"-->"  />
 </p>
 
 <p>
@@ -39,7 +39,7 @@
   Site URL: (http://)
  </label>
  <br />
- <input type="text" name="website_url" id="website_url" value="<!-- tmpl_var list_settings.website_url escape="HTML" -->" class="full" />
+ <input type="text" name="website_url" id="website_url" value="<!-- tmpl_var list_settings.website_url escape="HTML" -->"  />
 </p>
 
 <div class="buttonfloat">
