--- a/dada/templates/change_password_screen.tmpl
+++ b/dada/templates/change_password_screen.tmpl
@@ -17,8 +17,7 @@
 
 
 
-<div class="alert-box secondary">
-    
+<div class="alert-box info radius">
     <!-- tmpl_if root_login --> 
     
         <p>
@@ -29,12 +28,11 @@
         </p>
         
     <!-- /tmpl_if -->
-        
-        
-<p>
- Once you've changed the <strong>List Password</strong>, you will 
- be required to log back into the Mailing List control panel, using the newly changed <strong>List Password</strong>.
-</p>
+    
+    <p>
+     Once you've changed the <strong>List Password</strong>, you will 
+     be required to log back into the Mailing List control panel, using the newly changed <strong>List Password</strong>.
+    </p>
 </div>
 
 <fieldset> 
@@ -43,65 +41,43 @@
         <input type="hidden" name="flavor"       value="change_password" />
         <input type="hidden" name="process" value="1" />
 
-    <!-- tmpl_unless root_login -->
+        <!-- tmpl_unless root_login -->
 
-        <div class="row">
-          <div class="small-8">
             <div class="row">
-              <div class="small-3 columns">
-                   <label for="old_password" class="right">
-                       Your List Password
-                  </label> 
-              </div>
-              <div class="small-9 columns">
-                  <input type="password" id="old_password" name="old_password" maxlength="24" />
-              </div>
+               <div class="small-12 columns">
+                    <label for="old_password">
+                        List Password
+                        <input type="password" id="old_password" name="old_password" maxlength="24" />
+                    </label> 
+                </div> 
             </div>
-          </div>
-        </div>
 
-    <!--/tmpl_unless-->
+        <!--/tmpl_unless-->
 
-
-    <div class="row">
-      <div class="small-8">
         <div class="row">
-          <div class="small-3 columns">
-              <label for="new_password" class="right">
-                  List Password
-              </label> 
-          </div>
-          <div class="small-9 columns">
-             <input type="password" name="new_password" id="new_password"  maxlength="24" />
-          </div>
+           <div class="small-12 columns">
+               <label for="new_password">
+                   New List Password
+                   <input type="password" name="new_password" id="new_password"  maxlength="24" />
+                </label> 
+            </div> 
         </div>
-      </div>
-    </div>
 
-    <div class="row">
-      <div class="small-8">
         <div class="row">
-          <div class="small-3 columns">
-              <label for="again_new_password" class="right">
-                  Re-enter List Password
-              </label> 
-          </div>
-          <div class="small-9 columns">
-              <input type="password" name="again_new_password" id="again_new_password" maxlength="24" />
-          </div>
+           <div class="small-12 columns">
+               <label for="again_new_password">
+                   Re-enter New List Password
+                   <input type="password" name="again_new_password" id="again_new_password" maxlength="24" />
+                </label> 
+            </div> 
         </div>
-      </div>
-    </div>
 
-
-    </fieldset> 
-	
-    <ul class="button-group round right">    
-     <li><input type="reset"  class="button cautionary" /></li>
-     <li><input type="submit" class="button processing" value="Change Password" /></li>
-    </ul> 
-
-</form> 
+        <ul class="button-group right">    
+         <li><input type="reset"  class="button cautionary" /></li>
+         <li><input type="submit" class="button processing" value="Change Password" /></li>
+        </ul>
+    </form> 
+</fieldset> 
 
 
  
