--- a/dada/templates/changes_saved_dialog_box_widget.tmpl
+++ b/dada/templates/changes_saved_dialog_box_widget.tmpl
@@ -1,6 +1,6 @@
 <!-- begin changes_saved_dialog_box_widget.tmpl --> 
 
-<div class="clearskiesbox" id="alertbox">
+<div data-alert class="alert-box success radius"> id="alertbox">
 
 	<p>
 		Your changes have been saved!
