--- a/dada/templates/default_screen.tmpl
+++ b/dada/templates/default_screen.tmpl
@@ -73,7 +73,7 @@
 
 <!-- tmpl_else --> 
 
-	<div class="clearskiesbox">
+	<div data-alert class="alert-box success radius">>
      	<p>No Mailing Lists are currently available from this screen.</p>
 	</div>
 
