--- a/dada/templates/delete_list_screen.tmpl
+++ b/dada/templates/delete_list_screen.tmpl
@@ -14,12 +14,12 @@
 
 
 
-	<div class="badweatherbox">
-	<p>
-	 Are you sure you want to completely delete your Mailing List?
-	</p>
+    <div class="alert-box alert radius">
+        <p>
+    	 Are you sure you want to completely delete your Mailing List?
+    	</p>
 
-	<p>Mailing List Deletion cannot be undone.</p> 
+    	<p>Mailing List Deletion cannot be undone.</p> 
 
 	</div> 
 
