--- a/dada/templates/help_link_widget.tmpl
+++ b/dada/templates/help_link_widget.tmpl
@@ -5,7 +5,7 @@
 
 	<div class="buttonfloat">
 		<form action="<!-- tmpl_var HELP_LINKS_URL -->/<!-- tmpl_var screen -->.html" target="_blank" accept-charset="<!-- tmpl_var HTML_CHARSET -->" style="display: inline; margin: 0;"> 
-			<input class="small_button" type="submit" value="Help" /> 
+			<input class="button info tiny" type="submit" value="Help" /> 
 		</form>
 	</div>
 	<div class="floatclear"></div>
