--- a/dada/templates/list_invite_screen.tmpl
+++ b/dada/templates/list_invite_screen.tmpl
@@ -121,7 +121,7 @@
 	 <legend>
 	 	Already Invited Addresses</legend>
 	
-	<div class="clearskiesbox">
+	<div data-alert class="alert-box success radius">>
 		<p>
 		The below addresses have already been invited to your mailing list. 
 		
