--- a/dada/templates/list_options_screen.tmpl
+++ b/dada/templates/list_options_screen.tmpl
@@ -165,7 +165,7 @@
           </p>
           
           <div id="closed_list_notice"> 
-              <div class="clearskiesbox">  
+              <div data-alert class="alert-box success radius">>  
                   <p><strong>Closed List</strong></p> 
                   <p>Your Mailing List will be closed to all new subscriptions</p>
               </div> 
@@ -196,7 +196,7 @@
            
            
            <div id="not_anyone_can_subscribe_options">
-               <div class="clearskiesbox">
+               <div data-alert class="alert-box success radius">>
                    <p><strong>Invitation-Only Mailing List</strong></p>
 
                    <p>
@@ -328,7 +328,7 @@
                     	        <table class="options_tb">
                     	         <tr> 
                     	          <td class="checkbox_container"> 
-                    	           <input type="text" name="alt_url_sub_confirm_success" value="<!-- tmpl_var list_settings.alt_url_sub_confirm_success escape="HTML" -->" class="full" />
+                    	           <input type="text" name="alt_url_sub_confirm_success" value="<!-- tmpl_var list_settings.alt_url_sub_confirm_success escape="HTML" -->"  />
                     	          </td>
                     	         </tr> 
                     	         <tr> 
@@ -357,7 +357,7 @@
                     	       <table class="options_tb"> 
                     	        <tr> 
                     	         <td class="checkbox_container"> 
-                    	          <input type="text" name="alt_url_sub_confirm_failed" value="<!-- tmpl_var list_settings.alt_url_sub_confirm_failed escape="HTML" -->" class="full" />
+                    	          <input type="text" name="alt_url_sub_confirm_failed" value="<!-- tmpl_var list_settings.alt_url_sub_confirm_failed escape="HTML" -->"  />
                     	         </td>
                     	        </tr> 
                     	        <tr> 
@@ -446,7 +446,7 @@
                     <table class="options_tb">
                      <tr> 
                       <td class="checkbox_container">
-                       <input type="text" name="alt_url_subscription_approval_step" value="<!-- tmpl_var list_settings.alt_url_subscription_approval_step escape="HTML" -->" class="full" />
+                       <input type="text" name="alt_url_subscription_approval_step" value="<!-- tmpl_var list_settings.alt_url_subscription_approval_step escape="HTML" -->"  />
                       </td> 
                      </tr> 
                      <tr> 
@@ -540,7 +540,7 @@
                    <table class="options_tb">
                     <tr> 
                      <td>
-                      <input type="text" name="alt_url_sub_success" value="<!-- tmpl_var list_settings.alt_url_sub_success escape="HTML" -->" class="full" />
+                      <input type="text" name="alt_url_sub_success" value="<!-- tmpl_var list_settings.alt_url_sub_success escape="HTML" -->"  />
                      </td> 
                     </tr> 
                     <tr> 
@@ -567,7 +567,7 @@
                  <table class="options_tb">
                	 <tr> 
                	  <td> 
-                      <input type="text" name="alt_url_sub_failed" value="<!-- tmpl_var list_settings.alt_url_sub_failed escape="HTML" -->" class="full" />
+                      <input type="text" name="alt_url_sub_failed" value="<!-- tmpl_var list_settings.alt_url_sub_failed escape="HTML" -->"  />
                	  </td>
                	 </tr> 
                	 <tr> 
@@ -687,7 +687,7 @@
     
     
     <div id="private_list_notice"> 
-        <div class="clearskiesbox">
+        <div data-alert class="alert-box success radius">>
             <p>
                 <strong> 
                     Private List Mode
@@ -789,7 +789,7 @@
             <table class="options_tb">
              <tr> 
               <td> 
-               <input type="text" name="alt_url_unsub_success" value="<!-- tmpl_var list_settings.alt_url_unsub_success escape="HTML" -->" class="full" />
+               <input type="text" name="alt_url_unsub_success" value="<!-- tmpl_var list_settings.alt_url_unsub_success escape="HTML" -->"  />
               </td>
              </tr> 
              <tr> 
@@ -856,7 +856,7 @@
 
 
     <!-- tmpl_if list_settings.black_list --> 
-        <div class="clearskiesbox">  
+        <div data-alert class="alert-box success radius">>  
             <p>
                 <strong>
                     Black List is Enabled.
