--- a/dada/templates/list_template.tmpl
+++ b/dada/templates/list_template.tmpl
@@ -29,7 +29,7 @@
         	<h1><!-- tmpl_var title --></h1>
         	<!-- tmpl_if list_settings.list --> 
         		<!-- tmpl_if subscribed_to_list --> 
-        			<div class="clearskiesbox">
+        			<div data-alert class="alert-box success radius">>
         				<p>
         					You are currently subscribed to, <!-- tmpl_var list_settings.list_name -->!
         				</p> 
