--- a/dada/templates/mass_mailing_preferences_screen.tmpl
+++ b/dada/templates/mass_mailing_preferences_screen.tmpl
@@ -56,7 +56,7 @@
    </p>
 
 
-<div class="clearskiesbox">
+<div data-alert class="alert-box success radius">>
 <!-- tmpl_if show_amazon_ses_options --> 
 	<div id="amazon_ses_get_stats_loading"></div> 
 	<div id="amazon_ses_get_stats"></div> 
