--- a/dada/templates/membership_activity_screen.tmpl
+++ b/dada/templates/membership_activity_screen.tmpl
@@ -22,7 +22,7 @@
 
 <!-- tmpl_else --> 
 
-	<div class="clearskiesbox">
+	<div data-alert class="alert-box success radius">>
 		<p>
 			There hasn't yet been any logged Membership Activity for this mailing list. 
 		</p>
