--- a/dada/templates/plugins/bridge/default.tmpl
+++ b/dada/templates/plugins/bridge/default.tmpl
@@ -167,7 +167,7 @@
 				<div id="bridge_mail_forward_pipe_params">
 					<fieldset>
 						<label for="bridge_mail_forward_pipe_command">Email Forward Pipe Command (example):</label><br /> 
-						<input type="text" class="full" id="bridge_mail_forward_pipe_command" value="|<!-- tmpl_var program_abs_path --> --inject --list <!-- tmpl_var list_settings.list -->" />
+						<input type="text"  id="bridge_mail_forward_pipe_command" value="|<!-- tmpl_var program_abs_path --> --inject --list <!-- tmpl_var list_settings.list -->" />
 					</fieldset>
 					 
 				</div> 
@@ -195,7 +195,7 @@
 					    </label>
 					   </td>
 					   <td>
-					    <input name="discussion_pop_server" id="discussion_pop_server" type="text" value="<!-- tmpl_var list_settings.discussion_pop_server -->" class="full" />
+					    <input name="discussion_pop_server" id="discussion_pop_server" type="text" value="<!-- tmpl_var list_settings.discussion_pop_server -->"  />
 					   </td>
 					  </tr>
 					  <tr>
@@ -205,7 +205,7 @@
 					    </label>
 					   </td>
 					   <td>
-					    <input name="discussion_pop_username" id="discussion_pop_username" type="text" value="<!-- tmpl_var list_settings.discussion_pop_username -->" class="full" />
+					    <input name="discussion_pop_username" id="discussion_pop_username" type="text" value="<!-- tmpl_var list_settings.discussion_pop_username -->"  />
 					   </td>
 					  </tr>
 					  <tr>
@@ -1066,7 +1066,7 @@ Mailing List Security
  <label for="strip_file_attachments">Strip attachments that have the following file ending or MIME-Type:</label> <em>(separated by spaces)</em>
 	 <br />
 	 
-         <input type="text" name="file_attachments_to_strip" id="file_attachments_to_strip"value="<!-- tmpl_var list_settings.file_attachments_to_strip -->" class="full" />
+         <input type="text" name="file_attachments_to_strip" id="file_attachments_to_strip"value="<!-- tmpl_var list_settings.file_attachments_to_strip -->"  />
 
   </p>
  </td>
