--- a/dada/templates/plugins/password_protect_directories/default.tmpl
+++ b/dada/templates/plugins/password_protect_directories/default.tmpl
@@ -144,7 +144,7 @@
  </label>
 </td>
 <td align="left">
- <input type="text" name="name" value="" class="full" />
+ <input type="text" name="name" value=""  />
 </td>
 </tr>
 
@@ -155,7 +155,7 @@
  </label>
 </td>
 <td align="left">
- <input type="text" name="url" value="<!-- tmpl_var Base_URL -->" class="full" />
+ <input type="text" name="url" value="<!-- tmpl_var Base_URL -->"  />
 </td>
 </tr>
 
@@ -166,7 +166,7 @@
  </label>
 </td>
 <td align="left">
- <input type="text" name="path" value="<!-- tmpl_var Base_Absolute_Path -->" class="full" />
+ <input type="text" name="path" value="<!-- tmpl_var Base_Absolute_Path -->"  />
 </td>
 </tr>
 
@@ -188,7 +188,7 @@ Custom Error Page (Path):
  </label>
 </td>
 <td align="left">
- <input type="text" name="custom_error_page" value="" class="full" />
+ <input type="text" name="custom_error_page" value=""  />
 </td>
 </tr>
 
@@ -220,7 +220,7 @@ Custom Error Page (Path):
 	 </label>
 	</td>
 	<td align="left">
-	 <input type="text" name="default_password" value="" class="full" />
+	 <input type="text" name="default_password" value=""  />
 	</td>
 </tr>
 
