--- a/dada/templates/plugins/screen_cache/view.tmpl
+++ b/dada/templates/plugins/screen_cache/view.tmpl
@@ -12,7 +12,7 @@
 </div>
 
 
-<div class="clearskiesbox">
+<div data-alert class="alert-box success radius">>
 
 	<p>Screen Caching is currently <strong>
 <!-- tmpl_if cache_active --> 
