--- a/dada/templates/send_email_schedule_options_widget.tmpl
+++ b/dada/templates/send_email_schedule_options_widget.tmpl
@@ -97,7 +97,7 @@
                 
             </div>
             
-            <div class="clearskiesbox"> 
+            <div data-alert class="alert-box success radius">> 
                 <div id="mass_mailing_schedules_preview_results"></div>
                 <div class="buttonfloat"> 
                 	<input type="button" class="processing manually_run_all_scheduled_mass_mailings" value="Manually Run All Scheduled Mass Mailings"/>
