--- a/dada/templates/send_email_screen.tmpl
+++ b/dada/templates/send_email_screen.tmpl
@@ -46,7 +46,7 @@
 
       <!-- tmpl_if draft_id --> 
           <!-- tmpl_if expr="(draft_role eq 'draft')" --> 
-          	<div class="clearskiesbox">
+          	<div data-alert class="alert-box success radius">>
           		<p>
           			Draft message restored below:
           		</p>
