--- a/dada/templates/sending_preferences_screen.tmpl
+++ b/dada/templates/sending_preferences_screen.tmpl
@@ -293,7 +293,7 @@
 			<div id="pop_before_smtp_options">
 			<fieldset> 
 
-			<div class="clearskiesbox">
+			<div data-alert class="alert-box success radius">>
 		    A connection to your POP Server will be created before any mail will be sent. 
 		    This can authenticate your outgoing mail requests, if your SMTP server 
 		    uses POP-before-SMTP or your SMTP server does not use SASL.
@@ -462,7 +462,7 @@
 			    <!-- tmpl_include ses_email_verification_widget.tmpl -->
 
 
-				<div class="clearskiesbox">
+				<div data-alert class="alert-box success radius">>
 					<div id="amazon_ses_get_stats"></div> 
 				</div> 
 			<!-- /tmpl_if --> 
