--- a/dada/templates/test_sent_notice_widget.tmpl
+++ b/dada/templates/test_sent_notice_widget.tmpl
@@ -1,6 +1,6 @@
 <!-- begin mass_mailing_limit_notice_widget.tmpl --> 
 	<!-- tmpl_if test_sent --> 
-		<div class="clearskiesbox" id="alertbox">
+		<div data-alert class="alert-box success radius"> id="alertbox">
 			<p>
 				Test message sent to, <strong><!-- tmpl_var test_recipient --></strong> 
 			</p>
