--- a/dada/templates/validate_update_email_widget.tmpl
+++ b/dada/templates/validate_update_email_widget.tmpl
@@ -23,7 +23,7 @@
 		
 		<!-- tmpl_else --> 
 		
-			<div class="clearskiesbox">
+			<div data-alert class="alert-box success radius">>
 
 				<p>
 					<strong>
