--- a/dada/templates/view_list_modalmenu_widget.tmpl
+++ b/dada/templates/view_list_modalmenu_widget.tmpl
@@ -2,7 +2,7 @@
 
 <!-- tmpl_if expr="((add_email_count > 0) || (update_email_count > 0)  || (delete_email_count  > 0) || (black_list_add > 0) || (approved_count  > 0) || (denied_count  > 0) || (bounced_list_moved_to_list_count  > 0) || (bounced_list_removed_from_list > 0)  || (updated_addresses > 0) )" --> 
 
-<div class="clearskiesbox" id="alertbox">
+<div data-alert class="alert-box success radius"> id="alertbox">
 	
 	
 <!-- tmpl_if add_email_count -->	
