--- a/dada/installer-disabled/templates/captcha_recaptcha_test_widget.tmpl
+++ b/dada/installer-disabled/templates/captcha_recaptcha_test_widget.tmpl
@@ -15,7 +15,7 @@
 <!-- tmpl_var captcha escape="HTML" --></pre> 
 <!-- /tmpl_if --> 
 		
-		<div class="clearskiesbox"> 
+		<div data-alert class="alert-box success radius">> 
 			<p>
 				If you see the reCAPTCHA widget below, <strong>reCAPTCHA</strong> Configuration Worked!.
 			</p>
