--- a/dada/installer-disabled/templates/fast_cgi_test_widget.tmpl
+++ b/dada/installer-disabled/templates/fast_cgi_test_widget.tmpl
@@ -7,7 +7,7 @@
         <code><!-- tmpl_var errors escape="HTML" --></code>
     </div>
 <!-- tmpl_else --> 
-    <div class="clearskiesbox"> 
+    <div data-alert class="alert-box success radius">> 
         <p>FastCGI is Supported!</p>
     </div> 
 <!-- /tmpl_if --> 
