--- a/dada/installer-disabled/templates/installer_install_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_install_dada_mail_scrn.tmpl
@@ -33,13 +33,13 @@
 		
 	<p>Find this line in the source code of the <strong><em>dada/DADA/Config.pm</em></strong> file: </p> 
 	
-	<input type="text" class="full" value="$PROGRAM_CONFIG_FILE_DIR = 'auto';" />
+	<input type="text"  value="$PROGRAM_CONFIG_FILE_DIR = 'auto';" />
 	
 	<p>
 		Change it to:  
 	</p> 
 	
-	<input type="text" class="full" value="$PROGRAM_CONFIG_FILE_DIR = '<!-- tmpl_var install_dada_files_loc -->/<!-- tmpl_var Dada_Files_Dir_Name -->/.configs';" /> 
+	<input type="text"  value="$PROGRAM_CONFIG_FILE_DIR = '<!-- tmpl_var install_dada_files_loc -->/<!-- tmpl_var Dada_Files_Dir_Name -->/.configs';" /> 
 
 
 	</fieldset>
@@ -58,7 +58,7 @@
      This cronjob makes sure that things like the Mailing Monitor, Scheduled Mass Mailing, Bounce Handler, and Bridge function properly: 
  </p>
  
- <div class="clearskiesbox" style="width:90%"> 
+ <div data-alert class="alert-box success radius"> style="width:90%"> 
      <h1>
          <!-- tmpl_var S_PROGRAM_URL -->/<!-- tmpl_var scheduled_jobs_flavor escape="HTML" -->/_all/_all/_silent/
      </h1> 
@@ -69,7 +69,7 @@
  
  <p>
      <label for="cronjob_url">Here's an example of a cronjob, using the curl command:</label> <br /> 
-     <input type="text" class="full" id="cronjob_url" value="<!-- tmpl_var name="curl_location" default="/cannot/find/curl" --> --user-agent &quot;Mozilla/5.0 (compatible;)&quot; --silent --get --url <!-- tmpl_var S_PROGRAM_URL -->/<!-- tmpl_var scheduled_jobs_flavor escape="HTML" -->/_all/_all/_silent/" />
+     <input type="text"  id="cronjob_url" value="<!-- tmpl_var name="curl_location" default="/cannot/find/curl" --> --user-agent &quot;Mozilla/5.0 (compatible;)&quot; --silent --get --url <!-- tmpl_var S_PROGRAM_URL -->/<!-- tmpl_var scheduled_jobs_flavor escape="HTML" -->/_all/_all/_silent/" />
  </p>
  </fieldset> 
  
