--- a/dada/templates/add_email_screen.tmpl
+++ b/dada/templates/add_email_screen.tmpl
@@ -34,7 +34,7 @@
 
 <!-- tmpl_if expr="(type eq 'list')" --> 
         <!-- tmpl_if list_settings.send_subscribed_by_list_owner_message --> 
-            <div class="clearskiesbox">
+            <div data-alert class="alert-box success radius">>
                 <ul> 
                     <li>
                      <p>
@@ -45,7 +45,7 @@
             </div>
             <!-- /tmpl_if --> 
             <!-- tmpl_if list_settings.send_last_archived_msg_mass_mailing --> 
-            <div class="clearskiesbox">
+            <div data-alert class="alert-box success radius">>
             <ul> 
                 <li>
                  <p>
@@ -71,7 +71,7 @@
 <!-- tmpl_if expr="(type eq 'list')" --> 
     <!-- tmpl_if list_settings.closed_list -->
         <!-- tmpl_unless expr="((list_settings.enable_mass_subscribe == 1) && ((root_login == 1) || (list_settings.enable_mass_subscribe_only_w_root_login != 1)))" --> 
-         <div class="clearskiesbox">
+         <div data-alert class="alert-box success radius">>
          <p><strong>Warning!</strong></p> 
          <p>
              You currently have a <strong>Closed List</strong> and subscribing members via the list 
@@ -85,7 +85,7 @@
 
 <!-- tmpl_if expr="(type eq 'list')" --> 
     <!-- tmpl_unless expr="((list_settings.allow_profile_editing == 1) || (root_login == 1))"-->
-        <div class="clearskiesbox">
+        <div data-alert class="alert-box success radius">>
             <p>
                 Profile Field Editing is <strong>Disabled.</strong>
             </p>
@@ -98,7 +98,7 @@
 
 
 <!-- tmpl_if expr="(type eq 'list')" --> 
-    <div class="clearskiesbox">
+    <div data-alert class="alert-box success radius">>
         <p>
             <strong>Check</strong> the addresses that you would like to Subscribe/Invite/Update
         </p> 
@@ -122,7 +122,7 @@
 
           <!-- tmpl_if expr="(root_login == 1) || (list_settings.allow_profile_editing == 1)" -->           
               <!-- tmpl_if expr="(type eq 'list')" -->
-                  <div class="clearskiesbox">
+                  <div data-alert class="alert-box success radius">>
                       <p>
                           Some of the <strong>Verified Addresses</strong> below may already have profile information saved.
                       </p>        
@@ -238,7 +238,7 @@
 
          <!-- tmpl_if expr="(root_login == 1) || (list_settings.allow_profile_editing == 1)" --> 
              <!-- tmpl_if expr="(type eq 'list')" --> 
-                 <div class="clearskiesbox">
+                 <div data-alert class="alert-box success radius">>
                      <p>
                       These addresses are <strong>already members</strong> of your Subscribers. They will not be subscribed/added/invited again. 
                      </p>
@@ -368,7 +368,7 @@
              <div id="black_listed_addresses">
              <fieldset> 
                <legend>Black Listed Addresses</legend>
-                 <div class="clearskiesbox">
+                 <div data-alert class="alert-box success radius">>
                   <p>
                    These addresses are 
                    <strong>
@@ -494,7 +494,7 @@
  --> 
  <fieldset> 
   <legend>Not White Listed Addresses</legend>
-     <div class="clearskiesbox">
+     <div data-alert class="alert-box success radius">>
          <p>These addresses are not included on your 
            <strong>
             white list.
@@ -611,7 +611,7 @@
      <fieldset> 
       <legend>Missing Profile Fields</legend>
   
-     <div class="clearskiesbox">
+     <div data-alert class="alert-box success radius">>
          <p>
           These addresses have missing profile fields that have been set as being required.
          </p>
@@ -733,7 +733,7 @@
  <fieldset> 
   <legend>Invalid Email Addresses</legend>
 
-     <div class="clearskiesbox">
+     <div data-alert class="alert-box success radius">>
          <p>
           These addresses did not go through validation successfully. They will <strong>not</strong> be subscribed/added/invited. 
           </p>
