--- a/dada/templates/amazon_ses_verify_email_widget.tmpl
+++ b/dada/templates/amazon_ses_verify_email_widget.tmpl
@@ -2,7 +2,7 @@
 
 <!-- tmpl_if valid_email -->
 	<!-- tmpl_if expr="(status == 200)" --> 
-		<div class="clearskiesbox">		
+		<div data-alert class="alert-box success radius">>		
 			<p>
 				Verification Sent! Check the email account for: <!-- tmpl_var amazon_ses_verify_email --> to complete the verification!
 			</p>
