--- a/dada/templates/edit_template_screen.tmpl
+++ b/dada/templates/edit_template_screen.tmpl
@@ -110,7 +110,7 @@
 	
 	
 <p>
- <input type="url" id="url_template" name="url_template" value="<!-- tmpl_var list_settings.url_template ESCAPE="HTML"-->" class="full" />
+ <input type="url" id="url_template" name="url_template" value="<!-- tmpl_var list_settings.url_template ESCAPE="HTML"-->"  />
 </p>
 	 
 <!--/tmpl_if -->
