--- a/dada/templates/edit_type_screen.tmpl
+++ b/dada/templates/edit_type_screen.tmpl
@@ -75,7 +75,7 @@
 		
 		<!-- tmpl_unless list_settings.private_list -->
     		<!-- tmpl_if unsub_link_found_in_pt_mlm --> 
-    			<div class="clearskiesbox"> 
+    			<div data-alert class="alert-box success radius">> 
         			<p>
         				Unsubscribe Link found in template.
         			</p>
@@ -125,7 +125,7 @@
         
 		<!-- tmpl_unless list_settings.private_list -->	
     		<!-- tmpl_if unsub_link_found_in_html_mlm --> 
-        		<div class="clearskiesbox"> 
+        		<div data-alert class="alert-box success radius">> 
         			<p>
         				Unsubscribe Link found in template.
         			</p>
