--- a/dada/templates/sending_monitor_screen.tmpl
+++ b/dada/templates/sending_monitor_screen.tmpl
@@ -19,7 +19,7 @@
 <!-- tmpl_if mailout_exists -->
 
 	<!-- tmpl_if sending_done --> 
-		<div class="clearskiesbox">
+		<div data-alert class="alert-box success radius">>
 	    <p> 
 	     Your mailing looks finished! You may navigate away from this window!
 	    </p>
@@ -306,7 +306,7 @@
 <!--tmpl_else--> 
 
     <!-- tmpl_if killed_it -->
-    	<div class="clearskiesbox" id="alertbox">
+    	<div data-alert class="alert-box success radius"> id="alertbox">
         <p>
          Your Mass Mailing was successfully stopped.
         </p>
@@ -317,7 +317,7 @@
 	</div>    
     <!-- tmpl_else --> 
         
-	<div class="clearskiesbox">
+	<div data-alert class="alert-box success radius">>
         <p> 
          This Mass Mailing has completed.
         </p>
